feat(ui): workflow run v2 display run results
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/libs/workflow-graph/src/lib/stages-graph.scss
+++ b/ui/libs/workflow-graph/src/lib/stages-graph.scss
@@ -69,12 +69,15 @@
     flex-direction: row;
 
     button {
-        margin-right: 15px;
         background-color: #fff;
 
         :host-context(.night) & {
             background-color: #141414;
         }
+    }
+
+    button:not(:last-child) {
+        margin-right: 10px;
     }
 }
 
