--- a/ui/libs/workflow-graph/src/lib/stages-graph.scss
+++ b/ui/libs/workflow-graph/src/lib/stages-graph.scss
@@ -88,6 +88,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    cursor: pointer;
 
     .hook {
         background-color: white;
