feat(ui): workflow run v2 show sources
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/projectv2/run/gate/gate.html
+++ b/ui/src/app/views/projectv2/run/gate/gate.html
@@ -1,31 +1,34 @@
-<h1>Trigger {{gateNode.job}}</h1>
-<div nz-form nzLayout="horizontal" *ngIf="!jobEvent">
+<div class="title">Trigger job&nbsp;<b>{{gateNode.job}}</b></div>
+<div class="close" (click)="clickClose()">
+    <span nz-icon nzType="close" nzTheme="outline"></span>
+</div>
+<div class="content" *ngIf="!jobEvent">
     <ng-container *ngFor="let k of request | keys">
         <nz-form-item>
             <nz-form-label [nzSpan]="4">{{k}}</nz-form-label>
-                <ng-container [ngSwitch]="currentGate.inputs[k].type">
-                    <nz-form-control *ngSwitchCase="'number'">
-                        <input nz-input [(ngModel)]="request[k]" type="number" />
-                    </nz-form-control>
-                    <nz-form-control *ngSwitchCase="'boolean'">
-                        <label nz-checkbox [(ngModel)]="request[k]"></label>
-                    </nz-form-control>
-                    <nz-form-control *ngSwitchCase="'enum'">
-                        <nz-select [(ngModel)]="request[k]">
-                            <nz-option *ngFor="let o of currentGate.inputs[k].values" [nzValue]="o" [nzLabel]="o"></nz-option>
-                        </nz-select>
-                    </nz-form-control>
-                    <nz-form-control *ngSwitchDefault>
-                        <input nz-input [(ngModel)]="request[k]" type="text" />
-                    </nz-form-control>
-                </ng-container>
+            <ng-container [ngSwitch]="currentGate.inputs[k].type">
+                <nz-form-control *ngSwitchCase="'number'">
+                    <input nz-input [(ngModel)]="request[k]" type="number" />
+                </nz-form-control>
+                <nz-form-control *ngSwitchCase="'boolean'">
+                    <label nz-checkbox [(ngModel)]="request[k]"></label>
+                </nz-form-control>
+                <nz-form-control *ngSwitchCase="'enum'">
+                    <nz-select [(ngModel)]="request[k]">
+                        <nz-option *ngFor="let o of currentGate.inputs[k].values" [nzValue]="o"
+                            [nzLabel]="o"></nz-option>
+                    </nz-select>
+                </nz-form-control>
+                <nz-form-control *ngSwitchDefault>
+                    <input nz-input [(ngModel)]="request[k]" type="text" />
+                </nz-form-control>
+            </ng-container>
         </nz-form-item>
     </ng-container>
-    <ng-container *ngIf="!jobEvent">
-        <button nz-button nzBlock [nzLoading]="loading" nzType="primary" (click)="triggerJob()">Run {{gateNode.job}}</button>
-    </ng-container>
+    <button *ngIf="!jobEvent" nz-button nzBlock [nzLoading]="loading" nzType="primary"
+        (click)="triggerJob()">Run</button>
 </div>
-<div *ngIf="jobEvent">
+<div class="content" *ngIf="jobEvent">
     Payload sent by {{jobEvent.username}}:
     <pre>
         <p>{{jobEvent.inputs | json}}</p>
