--- a/ui/src/app/views/projectv2/run/project.run.scss
+++ b/ui/src/app/views/projectv2/run/project.run.scss
@@ -8,6 +8,13 @@
 
 nz-page-header-title {
     font-size: 16px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    button {
+        margin-left: 5px;
+    }
 }
 
 nz-page-header-content {
