--- a/ui/src/app/views/projectv2/run/run-job.scss
+++ b/ui/src/app/views/projectv2/run/run-job.scss
@@ -31,7 +31,11 @@ app-tabs {
     cursor: pointer;
 
     &:hover {
-        color: white;
+        color: $darkTheme_grey_5;
+        
+        :host-context(.night) & {
+            color: white;
+        }
     }
 
     .icon {
