--- a/ui/src/app/views/workflow/run/node/pipeline/workflow-run-job/workflow-run-job.scss
+++ b/ui/src/app/views/workflow/run/node/pipeline/workflow-run-job/workflow-run-job.scss
@@ -88,9 +88,10 @@
                 color: #B4B4B4;
                 cursor: pointer;
 
-                i {
+                [nz-icon] {
                     position: absolute;
                     left: 5px;
+                    top: 5px;
                 }
 
                 .loader {
@@ -190,10 +191,10 @@
                     }
                 }
 
-              i {
-                margin-right: 5px;
-                font-size: 1.4em;
-              }
+                i {
+                    margin-right: 5px;
+                    font-size: 1.4em;
+                }
             }
         }
     }
