feat(ui): workflow run v2 switch attempt
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/projectv2/run/project.run.html
+++ b/ui/src/app/views/projectv2/run/project.run.html
@@ -4,9 +4,13 @@
             <nz-page-header-title>
                 {{workflowRun.vcs_server}}/{{workflowRun.repository}}/{{workflowRun.workflow_name}}
                 #{{workflowRun.run_number}}
+                <nz-select *ngIf="workflowRun.run_attempt > 1 && selectedRunAttempt" [ngModel]="selectedRunAttempt"
+                    (ngModelChange)="changeRunAttempt($event)" nzSize="small" title="Select run attempt">
+                    <nz-option *ngFor="let item of [].constructor(workflowRun.run_attempt); let i = index"
+                        [nzValue]="i+1" [nzLabel]="i+1"></nz-option>
+                </nz-select>
                 <button nz-button nzType="default" nzSize="small" title="Show workflow sources"
-                    (click)="openPanel('workflow')"><span nz-icon nzType="file-text"
-                        nzTheme="outline"></span></button>
+                    (click)="openPanel('workflow')"><span nz-icon nzType="file-text" nzTheme="outline"></span></button>
             </nz-page-header-title>
             <nz-page-header-content>
                 <span nz-typography nzType="secondary">
@@ -57,8 +61,8 @@
                     </ng-container>
                 </ul>
                 <nz-table *ngIf="selectedTab && selectedTab.key === 'results'" class="results" [nsAutoHeightTable]="86"
-                    nzSize="small" [nzShowPagination]="false" [nzPageSize]="workflowRun.results?.length ?? 0"
-                    [nzData]="workflowRun.results" #autoHeightDirective=nsAutoHeightTable #resultsTable>
+                    nzSize="small" [nzShowPagination]="false" [nzPageSize]="results?.length ?? 0" [nzData]="results"
+                    #autoHeightDirective=nsAutoHeightTable #resultsTable>
                     <thead>
                         <tr>
                             <th nzWidth="100px">Type</th>
@@ -67,7 +71,7 @@
                     </thead>
                     <tbody>
                         <tr class="result" *ngFor="let result of resultsTable.data"
-                            (click)="openPanel('result', result.id)">
+                            (click)="openPanel('result', result)">
                             <td>
                                 {{result.type}}
                             </td>
@@ -96,7 +100,7 @@
             (onClose)="closePanel()"></app-run-gate>
         <app-run-hook *ngIf="selectedItemType === 'hook'" [hook]="selectedHookName" [run]="workflowRun"
             (onClose)="closePanel()"></app-run-hook>
-        <app-run-result *ngIf="selectedItemType === 'result'" [run]="workflowRun" [resultID]="selectedRunResultID"
+        <app-run-result *ngIf="selectedItemType === 'result'" [result]="selectedRunResult"
             (onClose)="closePanel()"></app-run-result>
         <app-run-workflow *ngIf="selectedItemType === 'workflow'" [workflow]="workflowGraph"
             (onClose)="closePanel()"></app-run-workflow>
