--- a/ui/src/app/views/projectv2/run/project.run.scss
+++ b/ui/src/app/views/projectv2/run/project.run.scss
@@ -12,7 +12,8 @@ nz-page-header-title {
     flex-direction: row;
     align-items: center;
 
-    button {
+    button,
+    nz-select {
         margin-left: 5px;
     }
 }
