--- a/ui/src/app/views/projectv2/vcs/repository/workflow/show/entity/project.workflow.entity.html
+++ b/ui/src/app/views/projectv2/vcs/repository/workflow/show/entity/project.workflow.entity.html
@@ -1,25 +1,20 @@
 <ng-container *ngIf="workflowFlatSchema && data">
-
     <div class="leftPanel">
-        <app-stages-graph [workflow]="dataGraph"
-                          (onSelectJob)="selectJob($event)"></app-stages-graph>
-
-
+        <app-stages-graph [workflow]="dataGraph" (onSelectJob)="selectJob($event)"></app-stages-graph>
         <div class="jobForm" *ngIf="selectedJob">
             <div (click)="selectedJob = undefined">
                 <button nz-button nzType="default">Return to workflow</button>
             </div>
             <app-json-form [class.disableSelection]="resizing" [disabled]="resizing" [parentType]="'V2Job'"
-                           [entityType]="actionEntity" [schema]="jobFlatSchema" [data]="jobForm"
-                           (dataChange)="onFormChange($event)"></app-json-form>
+                [entityType]="actionEntity" [schema]="jobFlatSchema" [data]="jobForm"
+                (dataChange)="onFormChange($event)"></app-json-form>
         </div>
     </div>
 
-
     <app-resizable-panel minSize="400" [initialSize]="panelSize" (onGrabbingStart)="panelStartResize()"
-                         (onGrabbingEnd)="panelEndResize($event)">
-        <ng-container *ngIf="syntaxErrors?.length > 0">
-            <nz-alert nzType="error" [nzMessage]="syntaxErrorTmpl"></nz-alert>
+        (onGrabbingEnd)="panelEndResize($event)">
+        <nz-alert *ngIf="syntaxErrors?.length > 0" nzType="error" [nzMessage]="syntaxErrorTmpl">
+
             <ng-template #syntaxErrorTmpl>
                 <ul>
                     <li *ngFor="let e of syntaxErrors">
@@ -27,14 +22,11 @@
                     </li>
                 </ul>
             </ng-template>
-        </ng-container>
-
+        </nz-alert>
         <nz-tabset nzType="card" nzSize="small">
             <nz-tab [nzTitle]="path"></nz-tab>
         </nz-tabset>
         <nz-code-editor #editor [ngModel]="dataEditor" [nzEditorOption]="editorOption"
-                        (ngModelChange)="onEditorChange($event)"
-                        (nzEditorInitialized)="onEditorInit($event)"></nz-code-editor>
+            (ngModelChange)="onEditorChange($event)" (nzEditorInitialized)="onEditorInit($event)"></nz-code-editor>
     </app-resizable-panel>
 </ng-container>
-
